update showDemoMessage bug not showing demoText

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -374,7 +374,7 @@ div[role="dialog"] {
   padding: 2em 1em 0.5em 1em;
 }
 .popup_inner p {
-  font-size: 1em;
+  font-size: 1.1em;
   font-weight: 600;
   margin-bottom: 1em;
 }
